2007-01-02  Per Bothner  <per@bothner.com>

	* FixupHtmlToc.java: New class, used for managing Kawa web site.
	* Makefile.am: Update accordingly.

2006-10-25  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java (rehash): Preserve order of nodes in hash
	bucket - this is useful for NameLookup.
	(mask, rehash): Make protected.
	* HashNode.java (next): Make public.

2006-10-24  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java (log2Size): Remove unneeded field.

	* GeneralHashTable.java (put): We need to update the index and first
	variable after a rehash.

2006-09-08  Per Bothner  <per@bothner.com>

	* ConsumeProc.java: Remove unused class.
	* Makefile.ma: Update accordingly.

2005-12-31  Per Bothner  <per@bothner.com>

	* PreProcess.java: Fix various problems in handling nested
	conditionals.

2005-12-30  Per Bothner  <per@bothner.com>

	* PreProcess.java (filter): Implement nested conditionals.

2005-10-16  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java: Improve compatibility with java.util.Map.
	(clear, size): New methods.
	* HashNode.java: Implement java.util.Map.Entry, in the JAVA2 case.
	(setValue): Method returns old value.
	(equals, hashCode): New methods.

	* GeneralHashTable.java (getNode): New helper method, for srfi69.scm.
	(table, num_bindings): Make proctected, for access from srfi69.scm.
	(next): New protected static method, also for srfi69.scm.

2005-08-16  Per Bothner  <per@bothner.com>

	* GeneralHashTable.java: New class.
	* HashNode.java: New class.
	* Makefile.am (java_sources): Add new classes.

2005-07-20  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST): Add PreProcess.java.

2005-06-04  Per Bothner  <per@bothner.com>

	* AbstractFormat.java: Moved to gnu.lists.
	* Makefile.am: Update accordingly.

	* AbstractFormat.java: No longer implement FormatToConsumer.
	(writeObject): New abstract method.
	(format): Update variable saveFormat to match OutPort's objectFormat.
