@@ -1,3 +1,10 @@
+2007-01-06  Per Bothner  <per@bothner.com>
+
+	* PreProcess.java (version_features): Map "java1" etc to
+	list of pre-process options.
+	(handleArg): New method.
+	Handele '%java1" etc using version_features.
+
 2007-01-02  Per Bothner  <per@bothner.com>
 
 	* FixupHtmlToc.java: New class, used for managing Kawa web site.
